<resources>
    <string name="app_name">Hw23</string>
    <string name="login">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="success">Success</string>
    <string name="cancel">cancel</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
</resources>
